# taskflow

./: .gitignore  AGENTS.md  ARCHITECTURE.md  LEAD-SOFTWARE-ENGINEER.md  PRODUCT-REQUIREMENTS.md  README.md  SPRINT-PLAN.md  SPRINT-REPORT.md  TEAM.md
.github/: README.md
.github/workflows/: lint.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt  server.py
backend/app/: __init__.py  main.py
backend/migrations/: env.py  script.py.mako
docs/: README.md
frontend/: .env.example  .eslintrc.cjs  .gitignore  Dockerfile  README.md  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  store.ts
frontend/src/app/: store.ts
frontend/src/components/board/: Board.tsx  Column.tsx  TaskCard.stories.tsx  TaskCard.tsx
frontend/src/components/layout/: AppLayout.tsx  Sidebar.tsx  TopBar.tsx
frontend/src/styles/: index.css
frontend/src/types/: index.ts
infrastructure/: README.md
infrastructure/terraform/: main.tf
tests/: TEST_PLAN.md
